--- a/android/java/TapResearchJavaDemo/app/src/main/res/layout/activity_main.xml
+++ b/android/java/TapResearchJavaDemo/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,17 @@
     android:padding="16dp"
     tools:context=".MainActivity">
 
+    <TextView
+        android:singleLine="false"
+        android:textAlignment="center"
+        android:padding="8dp"
+        android:id="@+id/statusView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
