Add an example for the Survey Wall Preview feature

--- a/ios/Swift+UIKit/IntegrationDemo_Swift_UIKit/Base.lproj/Main.storyboard
+++ b/ios/Swift+UIKit/IntegrationDemo_Swift_UIKit/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23094" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5NR-Ai-3Wg">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23084"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="fuF-fL-CYd">
-                                <rect key="frame" x="0.0" y="199" width="393" height="619"/>
+                                <rect key="frame" x="0.0" y="243" width="393" height="575"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PlacementCell" rowHeight="60" id="LmP-df-d9N" customClass="PlacementCell" customModule="IntegrationDemo_Swift_UIKit" customModuleProvider="target">
@@ -63,7 +63,7 @@
                                 </connections>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rGp-Bm-eIW">
-                                <rect key="frame" x="0.0" y="59" width="393" height="140"/>
+                                <rect key="frame" x="0.0" y="103" width="393" height="140"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Placement Tag:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="084-rO-sQc">
                                         <rect key="frame" x="20" y="15" width="117" height="21"/>
@@ -137,15 +137,122 @@
                             <constraint firstItem="fuF-fL-CYd" firstAttribute="top" secondItem="rGp-Bm-eIW" secondAttribute="bottom" id="yp4-Lp-pN2"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="gGa-en-CFO"/>
                     <connections>
                         <outlet property="placementStatus" destination="V2J-XM-JwP" id="5aK-fP-E1g"/>
                         <outlet property="tableView" destination="fuF-fL-CYd" id="M4l-J6-wnF"/>
                         <outlet property="textField" destination="JdI-nc-Jjo" id="tMH-O3-rUS"/>
+                        <segue destination="O2R-ti-mag" kind="show" identifier="ShowSurveys" id="NO0-S5-IOQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="130.53435114503816" y="-27.464788732394368"/>
+            <point key="canvasLocation" x="31" y="10"/>
+        </scene>
+        <!--Native Wall View Controller-->
+        <scene sceneID="UBF-a0-yXa">
+            <objects>
+                <viewController storyboardIdentifier="NativeWallViewController" id="O2R-ti-mag" customClass="NativeWallViewController" customModule="TestApp_Swift_UIKit" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nCj-mf-mzl">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1ev-GG-7x8">
+                                <rect key="frame" x="0.0" y="103" width="393" height="20"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="cil-Yg-xo2"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="LeZ-u7-TzW">
+                                <rect key="frame" x="0.0" y="123" width="393" height="695"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PlacementCell" rowHeight="60" id="pRd-RG-VOX" customClass="PlacementCell" customModule="TestApp_Swift_UIKit" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="60"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="pRd-RG-VOX" id="zbb-Uo-9K3">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="60"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Foe-pm-kVn">
+                                                    <rect key="frame" x="20" y="33" width="36" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LIj-fZ-E80">
+                                                    <rect key="frame" x="20" y="10" width="44" height="22"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="LIj-fZ-E80" firstAttribute="leading" secondItem="zbb-Uo-9K3" secondAttribute="leading" constant="20" symbolic="YES" id="8h9-Q6-bNY"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Foe-pm-kVn" secondAttribute="trailing" constant="20" id="9Fs-u1-Waw"/>
+                                                <constraint firstItem="Foe-pm-kVn" firstAttribute="leading" secondItem="zbb-Uo-9K3" secondAttribute="leading" constant="20" symbolic="YES" id="H3y-sn-Ruc"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="LIj-fZ-E80" secondAttribute="trailing" constant="20" id="NGM-xr-N0Y"/>
+                                                <constraint firstAttribute="bottom" secondItem="Foe-pm-kVn" secondAttribute="bottom" constant="10" id="d1I-6R-Gnr"/>
+                                                <constraint firstItem="Foe-pm-kVn" firstAttribute="top" secondItem="LIj-fZ-E80" secondAttribute="bottom" constant="1" id="h8y-Xd-55M"/>
+                                                <constraint firstItem="LIj-fZ-E80" firstAttribute="top" secondItem="zbb-Uo-9K3" secondAttribute="top" constant="10" id="nKp-xe-vS1"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="subLabel" destination="Foe-pm-kVn" id="Z9z-p3-wlB"/>
+                                            <outlet property="title" destination="LIj-fZ-E80" id="yiB-NE-DZQ"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="O2R-ti-mag" id="xiI-fu-BJr"/>
+                                    <outlet property="delegate" destination="O2R-ti-mag" id="ZVW-sa-cPO"/>
+                                </connections>
+                            </tableView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="AwT-U1-NaO">
+                                <rect key="frame" x="178" y="442" width="37" height="37"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="fhQ-kJ-23P"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="LeZ-u7-TzW" firstAttribute="top" secondItem="fhQ-kJ-23P" secondAttribute="top" constant="20" id="0md-k2-ZBy"/>
+                            <constraint firstItem="fhQ-kJ-23P" firstAttribute="bottom" secondItem="LeZ-u7-TzW" secondAttribute="bottom" id="4qo-bJ-VIQ"/>
+                            <constraint firstItem="AwT-U1-NaO" firstAttribute="centerY" secondItem="fhQ-kJ-23P" secondAttribute="centerY" id="5ZY-Hd-Z2G"/>
+                            <constraint firstItem="AwT-U1-NaO" firstAttribute="centerX" secondItem="fhQ-kJ-23P" secondAttribute="centerX" id="AZk-f9-6xs"/>
+                            <constraint firstItem="fhQ-kJ-23P" firstAttribute="trailing" secondItem="LeZ-u7-TzW" secondAttribute="trailing" id="K1k-c9-A7M"/>
+                            <constraint firstItem="1ev-GG-7x8" firstAttribute="top" secondItem="fhQ-kJ-23P" secondAttribute="top" id="Ml4-G1-jZ9"/>
+                            <constraint firstItem="1ev-GG-7x8" firstAttribute="leading" secondItem="fhQ-kJ-23P" secondAttribute="leading" id="hvh-WJ-vea"/>
+                            <constraint firstItem="LeZ-u7-TzW" firstAttribute="leading" secondItem="fhQ-kJ-23P" secondAttribute="leading" id="jhd-Ke-idu"/>
+                            <constraint firstItem="fhQ-kJ-23P" firstAttribute="trailing" secondItem="1ev-GG-7x8" secondAttribute="trailing" id="zhy-nE-C3c"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="ixg-Qg-VHC"/>
+                    <connections>
+                        <outlet property="networkBanner" destination="1ev-GG-7x8" id="RDS-fa-Wm5"/>
+                        <outlet property="spinner" destination="AwT-U1-NaO" id="CMG-pA-yxw"/>
+                        <outlet property="tableView" destination="LeZ-u7-TzW" id="bfW-th-nfi"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="z2g-JK-y7K" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="894" y="10"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="yFb-2f-67o">
+            <objects>
+                <navigationController id="5NR-Ai-3Wg" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="XuZ-ca-zm8">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="onx-SO-y6I"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="m3E-cn-2yI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-804" y="10"/>
         </scene>
     </scenes>
     <resources>
