Update ObjC example for surveys and a slight cleanup on project files

--- a/ios/ObjC+UIKit/IntegrationDemo_ObjC_UIKit/Base.lproj/Main.storyboard
+++ b/ios/ObjC+UIKit/IntegrationDemo_ObjC_UIKit/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23094" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Dca-RY-seV">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23084"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ywz-Yv-TVD">
-                                <rect key="frame" x="0.0" y="59" width="393" height="140"/>
+                                <rect key="frame" x="0.0" y="103" width="393" height="140"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Placement Tag:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JuF-Bd-4O7">
                                         <rect key="frame" x="20" y="15" width="117" height="21"/>
@@ -80,7 +80,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="P8X-dq-Jdi">
-                                <rect key="frame" x="0.0" y="199" width="393" height="619"/>
+                                <rect key="frame" x="0.0" y="243" width="393" height="575"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PlacementCell" rowHeight="60" id="kFo-pq-Fhf" customClass="PlacementCell">
@@ -137,15 +137,122 @@
                             <constraint firstItem="P8X-dq-Jdi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="z4y-sv-wvC"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="BEU-So-4Hx"/>
                     <connections>
                         <outlet property="placementStatus" destination="y2e-Gw-Az4" id="8R5-oL-iPC"/>
                         <outlet property="tableView" destination="P8X-dq-Jdi" id="67x-qo-IYU"/>
                         <outlet property="textField" destination="a15-ts-bFQ" id="UEg-R5-wUW"/>
+                        <segue destination="Ogc-2W-NSH" kind="show" identifier="ShowSurveys" id="NmJ-Cm-82g"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="130.53435114503816" y="-27.464788732394368"/>
+        </scene>
+        <!--Native Wall View Controller-->
+        <scene sceneID="e7a-lE-BMb">
+            <objects>
+                <viewController storyboardIdentifier="NativeWallViewController" id="Ogc-2W-NSH" customClass="NativeWallViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="JSt-14-AKw">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BaX-Dc-4Lb">
+                                <rect key="frame" x="0.0" y="103" width="393" height="20"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="mQh-Ck-nbv"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="NMD-43-wDb">
+                                <rect key="frame" x="0.0" y="123" width="393" height="695"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PlacementCell" rowHeight="60" id="pDF-5b-0fu" customClass="PlacementCell">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="60"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="pDF-5b-0fu" id="SZf-3E-oBW">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="60"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fF6-Ja-9f1">
+                                                    <rect key="frame" x="20.000000000000004" y="33" width="35.333333333333343" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dzU-h8-gT7">
+                                                    <rect key="frame" x="19.999999999999996" y="10" width="43.666666666666657" height="22"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="dzU-h8-gT7" secondAttribute="trailing" constant="20" id="71c-hE-tGT"/>
+                                                <constraint firstAttribute="bottom" secondItem="fF6-Ja-9f1" secondAttribute="bottom" constant="10" id="7N5-zP-QYE"/>
+                                                <constraint firstItem="dzU-h8-gT7" firstAttribute="leading" secondItem="SZf-3E-oBW" secondAttribute="leading" constant="20" symbolic="YES" id="9Zz-1h-plJ"/>
+                                                <constraint firstItem="fF6-Ja-9f1" firstAttribute="top" secondItem="dzU-h8-gT7" secondAttribute="bottom" constant="1" id="BNt-04-wCf"/>
+                                                <constraint firstItem="fF6-Ja-9f1" firstAttribute="leading" secondItem="SZf-3E-oBW" secondAttribute="leading" constant="20" symbolic="YES" id="cqN-wD-PHI"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="fF6-Ja-9f1" secondAttribute="trailing" constant="20" id="uAR-tf-A94"/>
+                                                <constraint firstItem="dzU-h8-gT7" firstAttribute="top" secondItem="SZf-3E-oBW" secondAttribute="top" constant="10" id="yGz-6q-qnm"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="subLabel" destination="fF6-Ja-9f1" id="3WQ-rx-7jV"/>
+                                            <outlet property="title" destination="dzU-h8-gT7" id="T5c-ds-Wua"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Ogc-2W-NSH" id="XJ9-Mv-7oN"/>
+                                    <outlet property="delegate" destination="Ogc-2W-NSH" id="XbB-B7-oyA"/>
+                                </connections>
+                            </tableView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="iFA-u2-zCp">
+                                <rect key="frame" x="178" y="442" width="37" height="37"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="qZH-tn-UrJ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="iFA-u2-zCp" firstAttribute="centerY" secondItem="qZH-tn-UrJ" secondAttribute="centerY" id="7by-Gs-AZy"/>
+                            <constraint firstItem="qZH-tn-UrJ" firstAttribute="trailing" secondItem="NMD-43-wDb" secondAttribute="trailing" id="BRh-pA-l8H"/>
+                            <constraint firstItem="NMD-43-wDb" firstAttribute="top" secondItem="qZH-tn-UrJ" secondAttribute="top" constant="20" id="awQ-pl-BXi"/>
+                            <constraint firstItem="iFA-u2-zCp" firstAttribute="centerX" secondItem="qZH-tn-UrJ" secondAttribute="centerX" id="bNo-CC-hON"/>
+                            <constraint firstItem="NMD-43-wDb" firstAttribute="leading" secondItem="qZH-tn-UrJ" secondAttribute="leading" id="bdg-jp-uKU"/>
+                            <constraint firstItem="BaX-Dc-4Lb" firstAttribute="top" secondItem="qZH-tn-UrJ" secondAttribute="top" id="pin-Po-hQQ"/>
+                            <constraint firstItem="qZH-tn-UrJ" firstAttribute="trailing" secondItem="BaX-Dc-4Lb" secondAttribute="trailing" id="qB6-hf-u3t"/>
+                            <constraint firstItem="BaX-Dc-4Lb" firstAttribute="leading" secondItem="qZH-tn-UrJ" secondAttribute="leading" id="tRY-rL-fEZ"/>
+                            <constraint firstItem="qZH-tn-UrJ" firstAttribute="bottom" secondItem="NMD-43-wDb" secondAttribute="bottom" id="vKP-gw-8hn"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="1gr-uP-M5A"/>
+                    <connections>
+                        <outlet property="networkBanner" destination="BaX-Dc-4Lb" id="YB1-Og-hb2"/>
+                        <outlet property="spinner" destination="iFA-u2-zCp" id="saW-UH-Ix5"/>
+                        <outlet property="tableView" destination="NMD-43-wDb" id="UGb-Y1-0Fp"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jSj-t5-dUM" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="927" y="-35"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="1sm-Or-L5n">
+            <objects>
+                <navigationController id="Dca-RY-seV" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xmd-cs-rZr">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="e0o-eQ-sWd"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="52Q-3I-bPy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-659" y="-35"/>
         </scene>
     </scenes>
     <resources>
