java: added edit text field to contain sample boost tag for grant boost demo; kotlin next

--- a/android/java/TapResearchJavaDemo/app/src/main/res/layout/activity_main.xml
+++ b/android/java/TapResearchJavaDemo/app/src/main/res/layout/activity_main.xml
@@ -19,11 +19,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <Button
+    <LinearLayout
+        android:id="@+id/grantBoostLayout"
+        android:orientation="horizontal"
         android:visibility="gone"
-        android:id="@+id/grantBoostButton"
-        android:text="Grant Boost Demo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="onGrantBoostButtonClicked"/>
+        android:layout_height="wrap_content">
+        <EditText
+            android:layout_weight=".5"
+            android:id="@+id/grantBoostEditText"
+            android:text="boost-3x-1d"
+            android:hint="Enter boost tag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <Button
+            android:id="@+id/grantBoostButton"
+            android:text="Grant Boost Demo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onGrantBoostButtonClicked"/>
+    </LinearLayout>
+
 </LinearLayout>
